Second commit for webpages

--- a/Web Pages/SignUpPage.html
+++ b/Web Pages/SignUpPage.html
@@ -8,12 +8,23 @@
     </head>
 
     <body>
+        <div>
+            <img class="logo" src="img/ExeterOrientation.PNG" alt="Exeter Orientation Logo" >
         </div>
 
+		<div class="signup">
+			<p style="font-size: 30pt">BEGIN YOUR START TO UNIVERSITY</p>
             <form>
+				<input type = "text" id = "firstname" placeholder="First Name">                        
 				<br /><br />
+				<input type = "text" id = "surname" placeholder="Surname">
 				<br /><br />
+				<input type = "text" id = "email" placeholder="Email">
+				<br /><br />
+				<input type = "text" id = "username" placeholder="Username">
 				<br><br>
+				<input type = "password" id = "password" placeholder="Password">
+				<br /><br />
             </form>
 			<div class="tutormenu">
 				<button onclick="showTutors()" class="dropbtn">Tutor</button>
@@ -23,6 +34,18 @@
 					<a href="#">John</a>
 				</div>
 			</div>	
+        </div>
+
+		<div class="left-button">
+            <form action="HomePage.html">
+                <input type="image" src="img/back.png" alt="back">
+            </form>
+        </div>
+
+        <div class="right-button">
+            <form action="index.html">
+                <input type="image" src="img/SignUp.png" alt="signup">
+            </form>
         </div>
     </body> 
 </html> 
