--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -5,13 +5,21 @@
 		<link rel="stylesheet" type="text/css" href="css/HomePageStyle.css">
     </head>
     <body>
+        <div>
+			<img class="logo" src="img/ExeterOrientation.PNG" alt="Exeter Orientation Logo">
         </div>
+		
+		<div>
+			<h1>FIND YOUR START TO UNIVERSITY</h1>
+		</div>
 
+        <div class="left-button">	
             <form action="LoginPage.html">
                 <input type="image" src="img/login.png" alt="login">
             </form>
         </div>
 
+        <div class="right-button">	
             <form action="SignUpPage.html">
                 <input type="image" src="img/SignUp.png" alt="sign-up sign">
             </form>		
