--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -7,14 +7,34 @@
     </head>
 
     <body>
+        <div>
+            <img class="logo" src="img/ExeterOrientation.PNG" alt="Exeter Orientation Logo">
         </div>
+		
+		<div class="login">
+			<p style="font-size: 30pt">CONTINUE YOUR START TO UNIVERSITY</p>
+            <form>	
+				<input type = "text" id = "username" placeholder="Username"> 
+				<br /><br />
+				<input type = "password" id = "password" placeholder="Password">
+				<br /><br />
+				<p style="font-size: 15pt" align="right">
+				FORGOT PASSWORD?
+				</p>
             </form>
         </div>
+        
+		<div class="left-button">
             <form action="HomePage.html">
                 <input type="image" src="img/back.png" alt="back">
             </form>
         </div>
+		
+		<div class="right-button">
+            <form action="index.html">
+                <input type="image" src="img/sign.png" alt="login">
             </form>
         </div>
+        
     </body> 
 </html> 
