3rd commit for webpages
Redesigned the tutor dropdown menu and and altered the layout to make the pages more aesthetically pleasing when viewed on a mobile device

--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -13,16 +13,12 @@
 			<h1>FIND YOUR START TO UNIVERSITY</h1>
 		</div>
 
-        <div class="left-button">	
-            <form action="LoginPage.html">
-                <input type="image" src="img/login.png" alt="login">
-            </form>
+        <div class="left-button">
+			<button onclick="location.href = 'LoginPage.html';" class="btn"><img src="img/login.png" alt="login"></button>
         </div>
 
-        <div class="right-button">	
-            <form action="SignUpPage.html">
-                <input type="image" src="img/SignUp.png" alt="sign-up sign">
-            </form>		
+        <div class="right-button">
+			<button onclick="location.href = 'SignUpPage.html';" class="btn"><img src="img/SignUp.png" alt="signup"></button>
         </div>
     </body> 
 </html> 
