--- a/Web Pages/SignUpPage.html
+++ b/Web Pages/SignUpPage.html
@@ -14,15 +14,21 @@
 		<div class="signup">
 			<p style="font-size: 30pt">BEGIN YOUR START TO UNIVERSITY</p>
             <form style="padding:10px 0;">
-				<input type = "text" id = "firstname" placeholder="First Name" required>                        
+				<input type = "text" id = "firstname" placeholder="First Name" pattern="[A-Za-z]" required>                        
 				<br /><br />
-				<input type = "text" id = "surname" placeholder="Surname" required>
+				<input type = "text" id = "surname" placeholder="Surname" pattern="[A-Za-z]" required>
 				<br /><br />
-				<input type = "email" id = "email" placeholder="Email" required>
+				<input type = "email" id = "email" placeholder="Email" 
+					pattern=".+@exeter.ac.uk" 
+					title="Must by your exeter.ac.uk email address"
+					required>
 				<br /><br />
-				<input type = "text" id = "username" placeholder="Username" required>
+				<input type = "text" id = "username" placeholder="Username" pattern="[A-Za-z0-9]{1,15}" required>
 				<br><br>
-				<input type = "password" id = "password" placeholder="Password" required>
+				<input type = "password" id = "password" placeholder="Password" 
+					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+					title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters" 
+					required>
 				<br /><br />
 				<select id="tutors" name="tutors" required>
 					<option class="options" value="" disabled selected hidden>Please select a tutor</option>
