Updating logo on pages
Update page logo and add in pages for terms of service and privacy

--- a/Web Pages/Privacy.html
+++ b/Web Pages/Privacy.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Privacy Statement</title>
-        <link rel="stylesheet" type="text/css" href="/PrivacyStyle.css">
+        <link rel="stylesheet" type="text/css" href="css/PrivacyStyle.css">
+		<link rel="stylesheet" type="text/css" href="css/HomePageStyle.css">
     </head>
     <body>
+		<div>
+			<img class="logo" src="img/logo.PNG" alt="Exeter Orientation Logo">
+        </div>
+		
         <h1 align="center">Privacy Statement</h1>
         <p align="center"><i>Last Updated: 12th February 2020</i></p>
 
