--- a/Web Pages/SignUpPage.html
+++ b/Web Pages/SignUpPage.html
@@ -8,7 +8,7 @@
 
     <body>
         <div>
-            <img class="logo" src="img/ExeterOrientation.PNG" alt="Exeter Orientation Logo" >
+            <img class="logo" src="img/logo.PNG" alt="Exeter Orientation Logo" >
         </div>
 
 		<div class="signup">
