--- a/Web Pages/Terms.html
+++ b/Web Pages/Terms.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Terms & Conditions</title>
-        <link rel="stylesheet" type="text/css" href="/TermsStyle.css">
+        <link rel="stylesheet" type="text/css" href="css/TermsStyle.css">
+		<link rel="stylesheet" type="text/css" href="css/HomePageStyle.css">
     </head>
     <body>
+		<div>
+			<img class="logo" src="img/logo.PNG" alt="Exeter Orientation Logo">
+        </div>
+		
         <h1 align="center">Terms and Conditions</h1>
         <p align="center"><i>Last Updated: 12th February 2020</i></p>
 
