--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-			<img class="logo" src="img/ExeterOrientation.PNG" alt="Exeter Orientation Logo">
+			<img class="logo" src="img/logo.PNG" alt="Exeter Orientation Logo">
         </div>
 		
 		<div>
