--- a/Web Pages/index updated.html
+++ b/Web Pages/index updated.html
@@ -4,14 +4,14 @@
 
 <head>
 
-  <link rel="stylesheet" type="text/css" href="static/css/centralui.css">
-  <link rel="stylesheet" type="text/css" href="static/css/overlayui.css">
+  <link rel="stylesheet" type="text/css" href="css/centralui.css">
+  <link rel="stylesheet" type="text/css" href="css/overlayui.css">
   <title>Exeter Orienteering</title>
   <meta name="viewport" content="width=device-width, initial-scale=1,
   user-scalable=no">
   <script type="text/javascript" src="https://raw.githack.com/jbialobr/JsQRScanner/master/war/js/jsqrscanner.nocache.js"></script>
-  <script src="static/js/fitty.min.js"></script>
-  <script src="static/js/jsevents.js"></script>
+  <script src="js/fitty.min.js"></script>
+  <script src="js/jsevents.js"></script>
 
 </head>
 
@@ -78,22 +78,22 @@
   <div id="navigation-bar">
 
     <div class="navigation-bottom smallest" id="leaderboard-button" onclick="showOverlay()">
-      <img src="static/img/trophy.png" alt="Leaderboard" height="45"
+      <img src="img/trophy.png" alt="Leaderboard" height="45"
       class="button-art">
     </div>
     <div class="navigation-bottom medium" id="map-button">
-      <img src="static/img/map.png" alt="Map" height="60"
+      <img src="img/map.png" alt="Map" height="60"
       class="button-art" id="map-img">
     </div>
     <div class="navigation-bottom" id="checkin-button" onclick="checkIn()">
       <p id="checkin-text">Check in<p>
     </div>
     <div class="navigation-bottom medium" id="achievements-button">
-      <img src="static/img/badge.png" alt="Achiements" height="63"
+      <img src="img/badge.png" alt="Achiements" height="63"
       class="button-art">
     </div>
     <div class="navigation-bottom smallest" id="chatbot-button">
-      <img src="static/img/chatbot.png" alt="Chatbot" height="40"
+      <img src="img/chatbot.png" alt="Chatbot" height="40"
       class="button-art" id="chatbot-img">
     </div>
 
@@ -134,7 +134,7 @@
     </div>
 
     <div id="portrait-warning"></div>
-      <img id="warning-img" src="static/img/LandscapeWarning.png" height=180px>
+      <img id="warning-img" src="img/LandscapeWarning.png" height=180px>
       <p id="warning-txt">
         Please turn your device to portrait mode
       </p>
