quick map change
added more desc. to each building

--- a/Map/ExeterMap.html
+++ b/Map/ExeterMap.html
@@ -266,7 +266,6 @@
 		infoWindow = new google.maps.InfoWindow; 
 		hintWindow = new google.maps.InfoWindow;
 
-	
 		var InnoDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
 			'</div>'+
@@ -281,7 +280,10 @@
 		var harrisonDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
 			'</div>'+
-			'<h1 id="firstHeading" class="firstHeading">Harrison</h1>'
+			'<h1 id="firstHeading" class="firstHeading">Harrison</h1>' +
+			'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+			'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+			'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 	  
 		var harrisonInfo = new google.maps.InfoWindow({
 			content: harrisonDesc
@@ -290,7 +292,10 @@
 		var queensDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
 		'</div>'+
-		'<h1 id="firstHeading" class="firstHeading">Queens</h1>'
+		'<h1 id="firstHeading" class="firstHeading">Queens</h1>' +
+		'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+		'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+		'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 
 		var queensInfo = new google.maps.InfoWindow({
 			content: queensDesc
@@ -299,7 +304,10 @@
 		var forumDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
 			'</div>'+
-			'<h1 id="firstHeading" class="firstHeading">Forum</h1>'
+			'<h1 id="firstHeading" class="firstHeading">Forum</h1>' +
+			'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+			'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+			'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 	  
 		var forumInfo = new google.maps.InfoWindow({
 			content: forumDesc
@@ -308,7 +316,10 @@
 		var devonshireDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
 			'</div>'+
-			'<h1 id="firstHeading" class="firstHeading">Devonshire House</h1>'
+			'<h1 id="firstHeading" class="firstHeading">Devonshire House</h1>' +
+			'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+			'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+			'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 	  
 		var devonshireInfo = new google.maps.InfoWindow({
 			content: devonshireDesc
@@ -316,17 +327,23 @@
 	
 		var streathamDesc = '<div id="content">'+
 			'<div id="siteNotice">'+
-		  '</div>'+
-		  '<h1 id="firstHeading" class="firstHeading">Streatham Court</h1>'
+			'</div>'+
+			'<h1 id="firstHeading" class="firstHeading">Streatham Court</h1>'+
+			'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+			'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+			'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 		  
 		 var streathamInfo = new google.maps.InfoWindow({
 			content: streathamDesc
 		});
 			
 		var newmanDesc = '<div id="content">'+
-		  '<div id="siteNotice">'+
-		  '</div>'+
-		  '<h1 id="firstHeading" class="firstHeading">Newman</h1>'
+			'<div id="siteNotice">'+
+			'</div>'+
+			'<h1 id="firstHeading" class="firstHeading">Newman</h1>' +
+			'<p>(You earned 50 points)</p> <div id= "bodyContent">' + 
+			'<p><b>Extra Tasks:</b> </p> <p> 1.????????? - 5pts </p>' + 
+			'<p> 2.????????? - 5pts </p> <p> 3.????????? - 5pts</p>'
 
 		var newmanInfo = new google.maps.InfoWindow({
 			content: newmanDesc
