Update Add Game Keeper.html
Changing whole format so that it matches the home page.

--- a/Web Pages/AddGK.html
+++ b/Web Pages/AddGK.html
@@ -5,8 +5,27 @@
         <link rel="stylesheet" type="text/css" href="css/AddGKStyle.css">
     </head>
     <body>
-        <div class=signupGK>
-            <p style="font-size: 30px; text-align: center">Add Game Keeper</p>
+
+        <ul>
+            <li><img src="img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="addtutor">Add Tutor</a></li>
+            <li><a href="addGK">Add Game Keeper</a></li>
+            <li><a href="#upload">Edit Route</a></li>
+            <li><a href="#LogOut">Log Out</a></li>
+        </ul>
+
+        <div class="account">
+            <h1>Game Keeper Account</h1>
+        </div>
+
+        <div class="addGK-title">
+            <p><b>Add Game Keeper</b></p> 
+        </div>
+
+        <div class="GK-form">
+            <h3>Game Keeper Details</h3>
+
             <form>
                 <input type = "text" id = "firstname" placeholder="First Name" pattern="[A-Za-z]{1,}" required>                        
                 <br /><br />
@@ -23,9 +42,12 @@
                        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
                        title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters" 
                        required>
-                <br /><br />
-                <button class="submit-button">Submit</button>
+                <br /><br />		
             </form>
+
         </div>
+
+        <button class="submitTeamBtn">Add Game Keeper</button>
     </body>
 </html>
+
