--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -13,7 +13,7 @@
 		
 		<div class="login">
 			<p style="font-size: 30pt">CONTINUE YOUR START TO UNIVERSITY</p>
-            <form>	
+            <form action="/login" method = 'post'>	
 				<input type = "text" id = "username" placeholder="Username" required> 
 				<br /><br />
 				<input type = "password" id = "password" placeholder="Password" required>
@@ -26,7 +26,7 @@
 				</div>
 				
 				<div class="right-button">
-					<button class="btn"><img src="img/sign.png" alt="login"></button>
+					<button type="submit" class="btn"><img src="img/sign.png" alt="login"></button>
 				</div>
             </form>
         </div>        
