--- a/Web Pages/GameKeeper.html
+++ b/Web Pages/GameKeeper.html
@@ -7,11 +7,10 @@
     <body>
         <ul>
             <li><img src="img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="active" href="GameKeeper.html">Home</a></li>
             <li><a href="#route">Add Route</a></li>
             <li><a href="addtutor.html">Add Tutor</a></li>
             <li><a href="AddGK.html">Add Game Keeper</a></li>
-            <li><a href="#upload">Upload</a></li>
             <li><a href="#settings">Settings</a></li>
         </ul>
 
