Linking pages together

--- a/Web Pages/addtutor.html
+++ b/Web Pages/addtutor.html
@@ -11,10 +11,10 @@
 
         <ul>
             <li><img src="img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
-            <li><a class="active" href="gamekeeperv2">Home</a></li>
-            <li><a href="addTeam">Add Team</a></li>
-            <li><a href="addGK">Add Game Keeper</a></li>
-            <li><a href="#upload">Edit Route</a></li>
+            <li><a class="active" href="GameKeeper.html">Home</a></li>
+            <li><a href="#addRoute">Add Route</a></li>
+            <li><a href="addtutor.html">Add Tutor</a></li>
+            <li><a href="addGK.html">Add Game Keeper</a></li>
             <li><a href="#LogOut">Log Out</a></li>
         </ul>
 
