--- a/Web Pages/GameKeeper.html
+++ b/Web Pages/GameKeeper.html
@@ -11,7 +11,7 @@
             <li><a href="#route">Add Route</a></li>
             <li><a href="addtutor.html">Add Tutor</a></li>
             <li><a href="AddGK.html">Add Game Keeper</a></li>
-            <li><a href="#settings">Settings</a></li>
+            <li><a href="#settings">Logout</a></li>
         </ul>
 
         <div class="account">
