--- a/Web Pages/AddGK.html
+++ b/Web Pages/AddGK.html
@@ -9,9 +9,9 @@
         <ul>
             <li><img src="img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
             <li><a class="active" href="GameKeeper.html">Home</a></li>
+            <li><a href="#addRoute">Add Route</a></li>
             <li><a href="addtutor.html">Add Tutor</a></li>
             <li><a href="addGK.html">Add Game Keeper</a></li>
-            <li><a href="#upload">Edit Route</a></li>
             <li><a href="#LogOut">Log Out</a></li>
         </ul>
 
