changing colour scheme

--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -12,15 +12,12 @@
         </div>
 		
 		<div class="login">
-			<p style="font-size: 30pt">CONTINUE YOUR START TO UNIVERSITY</p>
+			<p style="font-size: 30pt; color: #FFFFFF;">CONTINUE YOUR START TO UNIVERSITY</p>
             <form action="/login" method = 'post'>	
 				<input type = "text" id = "username" placeholder="Username" required> 
 				<br /><br />
 				<input type = "password" id = "password" placeholder="Password" required>
 				<br /><br />
-				<p style="font-size: 15pt" align="right">
-				FORGOT PASSWORD?
-				</p>
 				<div class="left-button">
 					<button onclick="location.href = 'HomePage.html';" class="btn"><img src="img/back.png" alt="back"></button>
 				</div>
