--- a/Web Pages/SignUpPage.html
+++ b/Web Pages/SignUpPage.html
@@ -12,7 +12,7 @@
         </div>
 
 		<div class="signup">
-			<p style="font-size: 30pt">BEGIN YOUR START TO UNIVERSITY</p>
+			<p style="font-size: 30pt; color: #FFFFFF;">BEGIN YOUR START TO UNIVERSITY</p>
             <form action="/signup" method="post" style="padding:10px 0;">
 				<input type = "text" id = "firstname" placeholder="First Name" pattern="[A-Za-z]{1,}" required>                        
 				<br /><br />
@@ -38,7 +38,7 @@
 				</select>
 				<br /><br />
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
-				<label style="font-size: larger;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>	
+				<label style="font-size: larger; color: #FFFFFF;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>	
 				<div class="left-button">
 					<button onclick="location.href = 'HomePage.html';" class="btn"><img src="img/back.png" alt="back"></button>
 				</div>	
