--- a/Web Pages/SignUpPage.html
+++ b/Web Pages/SignUpPage.html
@@ -31,10 +31,10 @@
 					required>
 				<br /><br />
 				<select id="tutors" name="tutors" required>
-					<option class="options" value="" disabled selected hidden>Please select a tutor</option>
+					<!-- <option class="options" value="" disabled selected hidden>Please select a tutor</option>
 					<option class="options" value="Anna">Anna</option>
 					<option class="options" value="Mike">Mike</option>
-					<option class="options" value="John">John</option>
+					<option class="options" value="John">John</option> -->
 				</select>
 				<br /><br />
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
