--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -14,9 +14,9 @@
 		<div class="login">
 			<p style="font-size: 30pt; color: #FFFFFF;">CONTINUE YOUR START TO UNIVERSITY</p>
             <form action="/login" method = 'post'>	
-				<input type = "text" id = "username" placeholder="Username" required> 
+				<input type = "text" id = "username" name = "username" placeholder="Username" required>
 				<br /><br />
-				<input type = "password" id = "password" placeholder="Password" required>
+				<input type = "password" id = "password" name = "password" placeholder="Password" required>
 				<br /><br />
 				<div class="left-button">
 					<button onclick="location.href = 'HomePage.html';" class="btn"><img src="img/back.png" alt="back"></button>
