--- a/Web Pages/AddRoute.html
+++ b/Web Pages/AddRoute.html
@@ -44,6 +44,7 @@
 
                 <label for="building">Second building:</label>
                 <select id="building">
+                    <option value="forum" disabled="disabled">Forum</option>
                     <option value="streatham">Streatham Court</option>
                     <option value="harrison">Harrison</option>
                     <option value="devonshire">Devonshire House</option>
@@ -53,6 +54,7 @@
 
                 <label for="building">Third building:</label>
                 <select id="building">
+                    <option value="forum" disabled="disabled">Forum</option>
                     <option value="streatham">Streatham Court</option>
                     <option value="harrison">Harrison</option>
                     <option value="devonshire">Devonshire House</option>
@@ -63,6 +65,7 @@
 
                 <label for="building">Fourth building:</label>
                 <select id="building">
+                    <option value="forum" disabled="disabled">Forum</option>
                     <option value="streatham">Streatham Court</option>
                     <option value="harrison">Harrison</option>
                     <option value="devonshire">Devonshire House</option>
@@ -72,6 +75,7 @@
 
                 <label for="building">Fifth building:</label>
                 <select id="building">
+                    <option value="forum" disabled="disabled">Forum</option>
                     <option value="streatham">Streatham Court</option>
                     <option value="harrison">Harrison</option>
                     <option value="devonshire">Devonshire House</option>
@@ -81,6 +85,7 @@
 
                 <label for="building">Sixth building:</label>
                 <select id="building">
+                    <option value="forum" disabled="disabled">Forum</option>
                     <option value="streatham">Streatham Court</option>
                     <option value="harrison">Harrison</option>
                     <option value="devonshire">Devonshire House</option>
